; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_mlmetxrx.c_MLME_GetNextPacket.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_mlmetxrx.c_MLME_GetNextPacket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wbsoft_priv = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i64, i32 }
%struct.wb35_descriptor = type { i64, i64, i64, i32, i32, i64*, i32* }

@MAX_DESCRIPTOR_BUFFER_INDEX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MLME_GetNextPacket(%struct.wbsoft_priv* %0, %struct.wb35_descriptor* %1) #0 {
  %3 = alloca %struct.wbsoft_priv*, align 8
  %4 = alloca %struct.wb35_descriptor*, align 8
  store %struct.wbsoft_priv* %0, %struct.wbsoft_priv** %3, align 8
  store %struct.wb35_descriptor* %1, %struct.wb35_descriptor** %4, align 8
  %5 = load %struct.wb35_descriptor*, %struct.wb35_descriptor** %4, align 8
  %6 = getelementptr inbounds %struct.wb35_descriptor, %struct.wb35_descriptor* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.wb35_descriptor*, %struct.wb35_descriptor** %4, align 8
  %9 = getelementptr inbounds %struct.wb35_descriptor, %struct.wb35_descriptor* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = add i64 %7, %10
  %12 = load %struct.wb35_descriptor*, %struct.wb35_descriptor** %4, align 8
  %13 = getelementptr inbounds %struct.wb35_descriptor, %struct.wb35_descriptor* %12, i32 0, i32 0
  store i64 %11, i64* %13, align 8
  %14 = load i64, i64* @MAX_DESCRIPTOR_BUFFER_INDEX, align 8
  %15 = load %struct.wb35_descriptor*, %struct.wb35_descriptor** %4, align 8
  %16 = getelementptr inbounds %struct.wb35_descriptor, %struct.wb35_descriptor* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = urem i64 %17, %14
  store i64 %18, i64* %16, align 8
  %19 = load %struct.wbsoft_priv*, %struct.wbsoft_priv** %3, align 8
  %20 = getelementptr inbounds %struct.wbsoft_priv, %struct.wbsoft_priv* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 8
  %23 = load %struct.wb35_descriptor*, %struct.wb35_descriptor** %4, align 8
  %24 = getelementptr inbounds %struct.wb35_descriptor, %struct.wb35_descriptor* %23, i32 0, i32 6
  %25 = load i32*, i32** %24, align 8
  %26 = load %struct.wb35_descriptor*, %struct.wb35_descriptor** %4, align 8
  %27 = getelementptr inbounds %struct.wb35_descriptor, %struct.wb35_descriptor* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = getelementptr inbounds i32, i32* %25, i64 %28
  store i32 %22, i32* %29, align 4
  %30 = load %struct.wbsoft_priv*, %struct.wbsoft_priv** %3, align 8
  %31 = getelementptr inbounds %struct.wbsoft_priv, %struct.wbsoft_priv* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = load %struct.wb35_descriptor*, %struct.wb35_descriptor** %4, align 8
  %35 = getelementptr inbounds %struct.wb35_descriptor, %struct.wb35_descriptor* %34, i32 0, i32 5
  %36 = load i64*, i64** %35, align 8
  %37 = load %struct.wb35_descriptor*, %struct.wb35_descriptor** %4, align 8
  %38 = getelementptr inbounds %struct.wb35_descriptor, %struct.wb35_descriptor* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = getelementptr inbounds i64, i64* %36, i64 %39
  store i64 %33, i64* %40, align 8
  %41 = load %struct.wbsoft_priv*, %struct.wbsoft_priv** %3, align 8
  %42 = getelementptr inbounds %struct.wbsoft_priv, %struct.wbsoft_priv* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 1
  %44 = load i64, i64* %43, align 8
  %45 = load %struct.wb35_descriptor*, %struct.wb35_descriptor** %4, align 8
  %46 = getelementptr inbounds %struct.wb35_descriptor, %struct.wb35_descriptor* %45, i32 0, i32 4
  %47 = load i32, i32* %46, align 4
  %48 = sext i32 %47 to i64
  %49 = add nsw i64 %48, %44
  %50 = trunc i64 %49 to i32
  store i32 %50, i32* %46, align 4
  %51 = load %struct.wb35_descriptor*, %struct.wb35_descriptor** %4, align 8
  %52 = getelementptr inbounds %struct.wb35_descriptor, %struct.wb35_descriptor* %51, i32 0, i32 2
  %53 = load i64, i64* %52, align 8
  %54 = add i64 %53, 1
  store i64 %54, i64* %52, align 8
  %55 = load %struct.wbsoft_priv*, %struct.wbsoft_priv** %3, align 8
  %56 = getelementptr inbounds %struct.wbsoft_priv, %struct.wbsoft_priv* %55, i32 0, i32 0
  %57 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 8
  %59 = load %struct.wb35_descriptor*, %struct.wb35_descriptor** %4, align 8
  %60 = getelementptr inbounds %struct.wb35_descriptor, %struct.wb35_descriptor* %59, i32 0, i32 3
  store i32 %58, i32* %60, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
